@@ -1,3 +1,7 @@
+2002/09/10
+  Better RFC conformance. (Reset transactions after the DATA command and
+  when the MAIL command is being done)
+
 
 2002/09/08 - v0.10 Released
 
